gcc-14.2.0/gcc/testsuite/gdc.test/runnable/interface.d
version https://git-lfs.github.com/spec/v1
oid sha256:f3f3eb6ee8801f47424f9df911ea7e9eff87b528d8501c9bab7ca289d5b4e297
size 1251
